# SpeexDspForAndroid

./: LICENSE  README.md
SpeexDspForAndroid/app/: build.gradle
SpeexDspForAndroid/app/src/androidTest/java/io/github/sunnybird/speexdspforandroid/: ExampleInstrumentedTest.java
SpeexDspForAndroid/app/src/main/: AndroidManifest.xml
SpeexDspForAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
SpeexDspForAndroid/app/src/main/cpp/include/: Makefile
SpeexDspForAndroid/app/src/main/cpp/include/speex/: Makefile  speexdsp_config_types.h
SpeexDspForAndroid/app/src/main/cpp/libspeexdsp/: Makefile  arch.h  buffer.c  fftwrap.c  jitter.c  libspeexdsp.la  mdf.c  preprocess.c  resample.c  scal.c  testdenoise  testdenoise.c  testecho  testecho.c  testjitter  testjitter.c  testresample  testresample.c
SpeexDspForAndroid/app/src/main/cpp/libspeexdsp/.libs/: libspeexdsp.lai  testdenoise  testecho  testjitter  testresample
SpeexDspForAndroid/app/src/main/java/io/github/sunnybird/speexdspforandroid/: MainActivity.java
SpeexDspForAndroid/app/src/main/res/values/: strings.xml
SpeexDspForAndroid/app/src/test/java/io/github/sunnybird/speexdspforandroid/: ExampleUnitTest.java
SpeexDspForAndroid/gradle/wrapper/: gradle-wrapper.properties
